# bussdcc-system-health

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
contrib/systemd/: bussdcc-system-health.service  bussdcc-system.service
src/bussdcc_system/: cli.py  version.py
src/bussdcc_system/interface/: __init__.py  notification.py
src/bussdcc_system/interface/web/: interface.py  plugin.py
src/bussdcc_system/interface/web/blueprints/: system_stats.py
src/bussdcc_system/interface/web/devices/: plugin.py
src/bussdcc_system/interface/web/devices/templates/bussdcc_system/devices/: index.html  new.html  new_config.html  show.html
src/bussdcc_system/interface/web/info/: plugin.py
src/bussdcc_system/interface/web/info/templates/bussdcc_system/info/: index.html
src/bussdcc_system/interface/web/message_stats/: plugin.py
src/bussdcc_system/interface/web/runtime_info/: plugin.py
src/bussdcc_system/interface/web/services/: plugin.py
src/bussdcc_system/interface/web/services/templates/bussdcc_system/services/: index.html
src/bussdcc_system/interface/web/stats/: plugin.py
src/bussdcc_system/interface/web/templates/: base.html
src/bussdcc_system/interface/web/templates/components/system_stats/: _cpu_chart.html  _cpu_temperature_card.html  _cpu_usage_bar.html  _disk_usage_bar.html  _disk_usage_card.html  _memory_usage_bar.html  _network_chart.html  _network_usage_card.html  _system_load_card.html
src/bussdcc_system/message/: __init__.py  device_manager.py  identity.py  notify.py  stats.py
src/bussdcc_system/model/: __init__.py  device.py
src/bussdcc_system/process/: __init__.py  device_manager.py  system_identity.py  system_stats.py
src/bussdcc_system/service/: system_identity.py
src/bussdcc_system/service/device_manager/: __init__.py  graph.py  reconciler.py  service.py
src/bussdcc_system_health/: __init__.py  cli.py  version.py
src/bussdcc_system_health/events/: __init__.py  app.py  stats.py  system.py  web.py
src/bussdcc_system_health/interface/: __init__.py
src/bussdcc_system_health/interface/web/: __init__.py  base.py  factory.py  interface.py
src/bussdcc_system_health/interface/web/blueprints/: system_stats.py
src/bussdcc_system_health/interface/web/templates/: _cpu_temperature_card.html  _disk_usage_card.html  _memory_usage_bar.html  _network_chart.html  _network_usage_card.html  _system_load_card.html  base.html  home.html
src/bussdcc_system_health/interface/web/templates/components/system_stats/: _cpu_temperature_card.html  _cpu_usage_bar.html  _memory_usage_card.html  _network_usage_card.html  _system_load_card.html
src/bussdcc_system_health/interfaces/: __init__.py
src/bussdcc_system_health/interfaces/system/: __init__.py  factory.py  interface.py
src/bussdcc_system_health/interfaces/system/templates/: _cpu_temperature_card.html  _cpu_usage_bar.html  _network_chart.html  base.html  home.html
src/bussdcc_system_health/message/: __init__.py  stats.py
src/bussdcc_system_health/process/: __init__.py  system_identity.py  system_stats.py
src/bussdcc_system_health/processes/: __init__.py  system.py  system_health.py  system_identity.py  system_stats.py
src/bussdcc_system_health/runtime/: __init__.py  runtime.py
src/bussdcc_system_health/runtime/sink/: __init__.py  console.py  jsonl.py  protocol.py
src/bussdcc_system_health/service/: __init__.py  system_identity.py  system_stats.py
src/bussdcc_system_health/services/: __init__.py  system.py  system_health.py
src/bussdcc_system_health/sinks/: __init__.py  console.py  jsonl.py
(+10 files in other folders)
